<resources>
    <string name="app_name">Two2er</string>
    <string name="map_screen">Choose a Tutor</string>
    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="loading_please">Loading Please Wait.....</string>

    <!-- Strings related to Register -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="existing_account">Login here.</string>
    <string name="signup">Sign Up</string>
    <string name="create_pw">Create Password</string>

    <!-- Strings related to login -->
    <string name="curr_version">Version 1.0</string>
    <string name="button_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_emailad">Email Address</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_pw">Forgot Password?</string>

    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main2">Two2er</string>
    <string name="filter_button">Filter</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="location_service_description">Sends the users location to Two2er database</string>

    <string-array name="array_subjects">
        <item>Math</item>
        <item>English</item>
        <item>Science</item>
    </string-array>

    <string-array name="array_distance">
        <item>5 mi</item>
        <item>10 mi</item>
        <item>15 mi</item>
    </string-array>



</resources>
