<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:background="@drawable/newbackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:srcCompat="@drawable/logo"
            android:id="@+id/imageView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:layout_above="@+id/reg_firstname"
            android:paddingBottom="16dp" />

        <EditText android:id="@+id/reg_firstname"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:singleLine="true"
            android:layout_marginBottom="11dp"
            android:background="@drawable/firstname_lastname"
            android:layout_above="@+id/reg_lastname"
            android:layout_alignStart="@+id/reg_lastname"
            android:hint="@string/first_name"
            android:fontFamily="sans-serif-condensed"
            android:textColorHint="#fff"
            android:paddingLeft="10dp"
            android:textSize="18sp" />

        <EditText android:id="@+id/reg_email"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:singleLine="true"
            android:background="@drawable/emailregestration"
            android:layout_centerVertical="true"
            android:layout_alignStart="@+id/reg_lastname"
            android:hint="@string/prompt_emailad"
            android:fontFamily="sans-serif-condensed"
            android:textColorHint="#fff"
            android:textAlignment="textStart"
            android:paddingLeft="10dp" />

        <EditText android:id="@+id/reg_lastname"
        android:layout_width="300dp"
        android:layout_height="45dp"
            android:singleLine="true"
            android:background="@drawable/firstname_lastname"
            android:layout_marginBottom="13dp"
            android:autoText="@drawable/firstname_lastname"
            android:layout_above="@+id/reg_email"
            android:layout_alignStart="@+id/btnRegister"
            android:hint="@string/last_name"
            android:fontFamily="sans-serif-condensed"
            android:textColorHint="#fff"
            android:paddingLeft="10dp" />

        <EditText android:id="@+id/reg_password"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:password="true"
            android:singleLine="true"
            android:background="@drawable/passwordregiestration"
            android:layout_below="@+id/reg_email"
            android:layout_alignStart="@+id/reg_email"
            android:layout_marginTop="12dp"
            android:hint="@string/create_pw"
            android:fontFamily="sans-serif-condensed"
            android:textColorHint="#fff"
            android:paddingLeft="10dp" />

        <Button android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="35dp"
            android:text="@string/signup"
            android:background="@drawable/hdbutton"
            android:layout_marginBottom="31dp"
            android:textColor="@color/cast_expanded_controller_text_color"
            android:layout_above="@+id/link_to_login"
            android:layout_centerHorizontal="true" />

        <TextView android:id="@+id/link_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:text="@string/existing_account"
            android:gravity="center"
            android:textSize="12dip"
            android:textColor="@color/cast_expanded_controller_text_color"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnRegister" />

    </RelativeLayout>

</LinearLayout>